--- a/src/app/components/PaperClip/PaperClip.module.css
+++ b/src/app/components/PaperClip/PaperClip.module.css
@@ -23,6 +23,7 @@
     display: block;
     width: 1.2%;
     height: auto;
+    margin-left: 10px;
   }
   
   .popup {
